# transom

./: .gitignore  AGENTS.md  Cargo.toml  Package.swift  README.md
.github/workflows/: ci.yml
Sources/TransomKit/: Geometry.swift  HEVCEncoder.swift  Transport.swift
Sources/transom-host/: Transom.swift
Sources/transom-host/Commands/: Doctor.swift  MockClient.swift
Tests/TransomKitTests/: CoordinatesTests.swift
client/: AGENTS.md  Cargo.toml  README.md  build.rs  transom-client.exe.manifest  transom-client.rc
client/src/: main.rs  model.rs  net.rs  runner.rs  session.rs  vk.rs  window_fit.rs
client/src/win/: app.rs  decode.rs  dpi.rs  gpu.rs  input.rs  mod.rs  proxy.rs
client/src/wire/: control.rs  frame.rs  input.rs  json.rs  mod.rs  video.rs
docs/: architecture.md  protocol.md
host/: AGENTS.md
host/Sources/TransomHostApp/: ContentView.swift  HostSettings.swift  StreamPreview.swift
host/Sources/TransomKit/: DisplayCapture.swift  HostSession.swift
scripts/: make-app.sh
src/: doctor.rs  main.rs
