[package]
name = "transom-client"
version = "0.0.1-alpha"
edition = "2021"
rust-version = "1.74"
license = "AGPL-3.0-or-later"
description = "Windows client for the Transom seamless remote windowing system (pre-alpha)."
repository = "https://github.com/aydinmrnv/transom-client"
readme = "README.md"
publish = false

[[bin]]
name = "transom-client"
path = "src/main.rs"

# windows-rs is the ONLY runtime dependency, and only on Windows targets — the
# protocol core (wire/model/net/session) is pure Rust and needs nothing, which is
# what lets it build and test on any host. Adding *features* here is fine; adding
# new *crates* needs a discussion (invariants I-8).
[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Media_MediaFoundation",
]

[build-dependencies]
# Pre-approved: embeds the application manifest so Per-Monitor-V2 DPI awareness
# is declared before the first window exists. Only invoked for Windows targets
# (see build.rs), so it is inert when the crate is built on another host.
embed-resource = "2.4"
